Added getAll method to DaoDefaults interface